--- a/app_method_channel/web/index.html
+++ b/app_method_channel/web/index.html
@@ -40,6 +40,7 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+<script src="interop.js" defer></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
