lesson19 task1 + web done

--- a/app_method_channel/web/index.html
+++ b/app_method_channel/web/index.html
@@ -38,9 +38,10 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
 </head>
 <body>
-<script src="interop.js" defer></script>
+  <script src="interop.js" type="application/javascript"></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
